# genome-project

./: .gitignore  data_parser.py  hist1_analysis.py  jaccard_utils.py  main.py  models.py  pyproject.toml  utils.py
analysis/: analysis.py  clustering.py
data/: features.csv
legacy/: a.out  main.cpp
src/: constants.py  main.py  models.py  utils.py
src/analysis/: clustering.py  compaction.py  features.py  radial_position.py
src/data_handlers/: data_parser.py  subset_extraction.py
src/visualization/: clusters.py  features.py  jaccard.py  radial_position.py
visualization/: clusters.py  compaction.py  features.py  radial_position.py
