[project]
name = "activity1"
version = "0.1.0"
description = "Nuclear profile analysis tool"
requires-python = ">=3.7"
dependencies = [
    "matplotlib>=3.5.3",
    "numpy>=1.21.6",
    "pandas>=1.1.5",
    "plotly>=5.18.0",
    "pydantic>=2.5.3",
    "seaborn>=0.12.0",
]

[project.scripts]
main = "main:main"
